--- a/src/main/resources/templates/basic/variable.html
+++ b/src/main/resources/templates/basic/variable.html
@@ -18,8 +18,7 @@
 </ul>
 <ul>Map
     <li>${userMap['userA'].username} = <span th:text="${userMap['userA'].username}"></span></li>
-    <li>${userMap['userA']['username']} = <span th:text="${userMap['userA']
-['username']}"></span></li>
+    <li>${userMap['userA']['username']} = <span th:text="${userMap['userA']['username']}"></span></li>
     <li>${userMap['userA'].getUsername()} = <span th:text="${userMap['userA'].getUsername()}"></span></li></ul>
 </body>
 </html>
